--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "swiper": "^9.1.0",
     "typescript": "^4.9.4",
     "web-vitals": "^3.1.1"
   },
