--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "virtual-background",
+  "name": "Kaviar-Background-Removal",
   "version": "0.1.0",
-  "description": "Demo on adding virtual background to a live video stream in the browser",
-  "homepage": "https://volcomix.github.io/virtual-background",
-  "repository": "https://github.com/Volcomix/virtual-background.git",
-  "author": "Volcomix <Volcomix@users.noreply.github.com>",
+  "description": "Adding virtual background to a live video stream in the browser",
+  "homepage": "https://kaviar-webar.fr/nobg",
+  "author": "sael-you",
   "license": "MIT",
   "private": true,
   "dependencies": {
@@ -22,10 +21,12 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "clsx": "^1.2.1",
+    "downloadjs": "^1.4.7",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-whammy": "^1.0.4",
     "swiper": "^9.1.0",
     "typescript": "^4.9.4",
     "web-vitals": "^3.1.1"
